<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AICDetactor</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="user_name">name:</string>
    <string name="user_pswd">password:</string>
    <string name="login">SIGN IN</string>
    <string name="login_title">User Login</string>
    
     <string name="link">Link</string>
    <string name="unlink">Unlink</string>
    <string name="sensor_name">Sensor Name</string>
    <string name="sensor_status">Status</string>
    <string name="charge">Charge</string>
    <string name="shock">Shock</string>
    <string name="temperature">Temperature</string>
    <string name="revolution_speed">Revolution speed</string>
    
    
    <string name="plancheck_name">Plan check</string>
    <string name="tem_check">Temporary check</string>
    <string name="checked">Checked</string>
    <string name="uncheck">Uncheck</string>
    <string name="checking">Checking</string>
     <string name="bluetooth_string">蓝牙</string>
    <string name="check_string">巡检</string>
    <string name="search_string">查询</string>
    <string name="notice_string">通知</string>
    <string name="data_string">数据</string>
    <string name="check_order">反向巡检</string>
    <string name="no_bt_device">Can not support bluetooth</string>
    <string name="shureQuiteApp">Back agin will quite AIC app</string>
   
    
<string name="position">位置</string>
    <string name="direction">方向</string>
    <string name="next_item">下一点</string>
    <string name="pre_item">上一点</string>
    <string name="measurement">测量</string>
    <string name="measurement_countdown">测量倒计时：%1$d秒</string>
    <string name="motor_type">电机型号</string>
    <string name="tem_spec">特巡</string>
    <string name="motor_power">电机功率</string>
    <string name="rated_speed">额定转速</string>
    <string name="rated_voltage">额定电压</string>
    <string name="rated_current">额定电流</string>
    <string name="rated_power">额定功率</string>
    <string name="edit">编辑</string>
    <string name="x">X:</string>
    <string name="y">Y:</string>
    <string name="z">Z:</string>
    <string name="direction_select">方向选择</string>
    <string name="checkitem_name">巡检项：</string>
     <string name="save_device_checkdata">正在保存设备项巡检结果</string>
      <string name="warning">Warning:</string>
       <string name="extra">临检</string>
        <string name="camera">拍照</string>
         <string name="soundrecord">录音</string>
          <string name="textrecord">记录</string>
    <string name="prepoint">pre CheckPoint</string>
    <string name="notendtips">还有没完成的巡检项，请查看！</string>
    <string name="sound_start">Start</string>
    <string name="sound_pause">Puase</string>
    <string name="sound_save">Save</string>
    <string name="sound_play">Playback</string>
    <string name="tmp_title">Title：</string>
    <string name="tmp_datatype">Tpye:</string>
    <string name="tmp_content">Content:</string>
     <string name="save">Save</string>
      <string name="start_check">Start Check</string>
       <string name="default_username">张三1</string>
    <string name="default_password">00000000</string>
    <string name="cannot_check_time_tips">您好，现在还没到巡检轮次的时间</string>
    <string name="no_need_check_again">设备已经巡检完毕，不必重新巡检！</string>
    <string name="save_and_finish">Finish</string>
        <string name="electric_device_parameters">电机参数</string>
    <string name="electric_device_spectrum">电机振动频谱</string>
       <string name="finish">完成</string>
    <string name="time">时间：</string>
    <string name="beizhu">备注：</string>
    <string name="msg_today">今天</string>
    <string name="msg_all">全部</string>
    <string name="msg_unread">未读</string>
    
     <string name="time_tips_hours">%1$d小时前</string>
    <string name="time_tips_minutes">%1$d分钟前</string>
    <string name="time_tips_days">%1$d天前</string>
    <string name="time_tips_yestoday">昨天</string>
    <string name="setting_title">设置</string>
    <string name="setting_only_wifi">仅在WIFI环境中</string>
    
    <string name="setting_service_ip">服务器IP:</string>
     <string name="setting_pda_code">PDA编号:</string>
      <string name="setting_locoal_wifi">无线局域网</string>
      <string name="setting_local_phone">蜂窝移动网络</string>
     <string name="setting_back_up">存储备份</string>
      <string name="setting_remind">提醒</string>
      <string name="up_title">上传</string>
      <string name="up_base_info">基本信息</string>
      <string name="up_service_ip">服务器IP:</string>
     <string name="up_pda_code">PDA编号:</string>
     <string name="up_pda_ip">PDA IP:</string>
     <string name="up_pda_mac">PDA MAC:</string>
      <string name="up_auto_up">自动上传计划</string>
      <string name="up_type">上传类型</string>
      <string name="up_type_xj">常规巡检计划</string>
     <string name="up_type_temp">特别巡检计划</string>
     <string name="up_type_id">纽扣:%1$s</string>
      <string name="up_type_pda_info">PDA信息</string>
      <string name="up_up">上传</string>
      <string name="up_uped_delete">上传完，即销毁数据</string>
      <string name="down_title">下载</string>   
       <string name="down_base_info">基本信息</string>
       <string name="down_service_ip">服务器IP:</string>
     <string name="down_pda_code">PDA编号:</string>
     <string name="down_pda_mac">PDA MAC:</string>
          <string name="down_auto_down">自动下载计划</string>
           <string name="down_type">下载类型</string>
       <string name="down_type_xj">常规巡检计划</string>
     <string name="down_type_temp">特别巡检计划</string> 
     <string name="down_down">下载</string>   
     
       <string name="search_fliter">筛选</string>
       <string name="search_by_time">排序</string>
     <string name="search_check_type">检测类型</string>
     <string name="search_brivate">振动</string>
     <string name="search_check_temperator">测温</string>
     <string name="search_check_speed">测转速</string>
      <string name="search_check_observer">观察</string>
     <string name="search_check_txtrecord">快记</string>
     <string name="search_device_type">设备类型</string>
     <string name="search_device_a_class">A 类</string>
     <string name="search_device_b_class">B 类</string>
     <string name="search_device_c_class">C 类</string>
                     
     <string name="search_info_type">信息类型</string>
    
      <string name="search_info_xj">巡检</string>
      <string name="search_info_temp">临检</string>
      <string name="search_info_d">档案</string>
        <string name="search_exception_class">异常级别</string>
       <string name="search_fliter_by_time_asc">升序排序（由远及近）</string>
      <string name="search_fliter_by_time_dsc">降序排序（由近及远）</string>
      <string name="time_out">巡检时间已经超时，即将退出巡检</string> 
       <string name="pwd_modify">密码修改</string>
      <string name="pwd_old_pwd">旧  密  码</string>      
       <string name="pwd_new_pwd">新  密  码</string>
      <string name="pwd_sure_pwd">确认密码</string>
       <string name="pwd_save">保存</string>  
        <string name="pwd_err_tip">新密码或确认密码不能为空</string>   
         <string name="pwd_err_tip2">确认密码与新密码不相等</string>  
         <string name="pwd_not_login">您还没登录，请登录后再修改密码</string>      
         <string name="pwd_modify_sucess">密码修改成功</string>  
         <string name="search_local">本地查询</string>   
     <string name="search_database">数据库查询</string>  
     <string name="menu_modify_pwd">修改密码</string>   
     <string name="menu_change_worker">切换账户</string>   
     <string name="menu_more">更多</string>    
     <string name="check_name">巡检项名称:</string>      
</resources>
