<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
<!-- 检查类型 -->
    <LinearLayout
        android:layout_width="match_parent"
         android:layout_height="wrap_content"
        android:gravity="center" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_check_type"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
             >
             <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">"

        <RadioButton
            android:id="@+id/radio0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/search_brivate" />

        <RadioButton
            android:id="@+id/radio1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_check_temperator" />

        <RadioButton
            android:id="@+id/radio2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_check_speed" />
         <RadioButton
            android:id="@+id/radio3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_check_observer" />

        <RadioButton
            android:id="@+id/radio4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_check_txtrecord" />
    </RadioGroup>
            
        </LinearLayout>
        </LinearLayout>
         <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/red" >
    </LinearLayout>
        <!-- 设备类型 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_device_type"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
             >
             <RadioGroup
        android:id="@+id/radioGroup2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">"

        <RadioButton
            android:id="@+id/radio10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/search_device_a_class" />

        <RadioButton
            android:id="@+id/radio11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_device_b_class" />

        <RadioButton
            android:id="@+id/radio12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_device_c_class" />      
    </RadioGroup>
            
        </LinearLayout>
    </LinearLayout>

     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/red" >
    </LinearLayout>
      <!-- 信息类型 -->
    <LinearLayout
        android:layout_width="match_parent"
         android:layout_height="wrap_content"
        android:gravity="center" >

        <TextView
            android:id="@+id/textView22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_info_type"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <LinearLayout
            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
             >
             <RadioGroup
        android:id="@+id/radioGroup3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/radio40"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/search_info_xj" />

        <RadioButton
            android:id="@+id/radio41"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_info_temp" />

        <RadioButton
            android:id="@+id/radio42"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_info_d" />      
    </RadioGroup>
            
        </LinearLayout>
    </LinearLayout>
     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/red" >
    </LinearLayout>
    
     <!-- 异常级别 -->
    <LinearLayout
        android:layout_width="match_parent"
         android:layout_height="60dp"
        android:gravity="center"
        android:weightSum="4" >

        <TextView
            android:id="@+id/textView32"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_exception_class"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_weight="0.5" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3.5" >
             <RadioGroup
        android:id="@+id/radioGroup4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">"

        <RadioButton
            android:id="@+id/radio50"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:checked="true"
           android:button="@null"
           android:background="@color/lightgray"
           android:layout_weight="1" />

        <RadioButton
            android:id="@+id/radio51"
           
            android:layout_height="wrap_content"
            android:button="@null"
           android:background="@color/blue" 
           android:layout_weight="1"
           android:layout_width="60dp" />

        <RadioButton
            android:id="@+id/radio52"
          
            android:layout_height="wrap_content"
            android:button="@null"
           android:background="@color/yellow"
           android:layout_weight="1"
           android:layout_width="60dp"  />   
            <RadioButton
            android:id="@+id/radio53"
           
            android:layout_height="wrap_content"
            android:button="@null"
            android:background="@color/lightcoral"
            android:layout_weight="1"
            android:layout_width="60dp"  />

        <RadioButton
            android:id="@+id/radio54"
            
            android:layout_height="wrap_content"
            android:button="@null"
           android:background="@color/red"
           android:layout_weight="1"
           android:layout_width="60dp"  />      
    </RadioGroup>
            
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/red" >
    </LinearLayout>
</LinearLayout>
