<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:id="@+id/unitcheck"
    >
<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="0.9">
    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/curent_info" 
        android:layout_marginLeft="40dp"/>

    <TextView
        android:id="@+id/x_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/x"
        android:layout_marginLeft="40dp"
        android:textAppearance="?android:attr/textAppearanceLarge" />
<LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" 
	        android:orientation="horizontal"
	        android:id="@+id/y">"
    <TextView
        android:id="@+id/textiew1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/y"
        android:layout_marginLeft="40dp"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    <TextView
	        android:id="@+id/y_value"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/measurement_countdown"	        
	        android:layout_marginRight="10dp"
	        android:textAppearance="?android:attr/textAppearanceLarge"/>
    </LinearLayout>
	<LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" 
	        android:orientation="horizontal"
	        android:id="@+id/z">
	    
	    <TextView
	        android:id="@+id/textView3"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/z"
	        android:layout_marginLeft="40dp"
	        android:textAppearance="?android:attr/textAppearanceLarge" />
	    <TextView
	        android:id="@+id/z_value"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/measurement_countdown"	        
	        android:layout_marginRight="10dp" 
	        android:textAppearance="?android:attr/textAppearanceLarge"/>
	
	</LinearLayout>

	

	<RelativeLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content" 
	   
	    >
	    <TextView 
	        android:id="@+id/color_describ"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/warning"
	        android:layout_marginLeft="30dp"	        
	         />
	    <RadioButton
        android:id="@+id/radioButton2"        
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:button="@null"
        android:background="@color/green"
        android:layout_centerVertical="true" 
        android:layout_alignParentRight="true"
        android:layout_marginRight="20dp"        
        />
	</RelativeLayout>
	
   </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:gravity="right"
        android:weightSum="2"
        >
       
    <TextView
        android:id="@+id/countdown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/measurement_countdown"
        android:layout_weight="1"
        
     />
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:gravity="center|bottom"
        android:layout_weight="0.1"
        android:weightSum="4">
       
    <Button
        android:id="@+id/position"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/position"
        android:layout_weight="1"
     />

    <Button
        android:id="@+id/direction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/direction"
         android:layout_weight="1"
        />

    <Button
        android:id="@+id/measurement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/measurement"
        android:layout_weight="1"
        android:enabled="false"  />

    <Button
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next_item"
         android:layout_weight="1" 
       />   
    </LinearLayout>    

</LinearLayout>
