<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
 <ListView
            android:id="@+id/listView1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" >
        </ListView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tmp_title"
            android:textAppearance="?android:attr/textAppearanceLarge" />

       

        <EditText
            android:id="@+id/Button02"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/dataType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tmp_datatype"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Spinner
            android:id="@+id/spinner"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:layout_weight="1">

        <TextView
            android:id="@+id/Content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tmp_content"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/button1"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"          
             />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <Button
            android:id="@+id/camera"
            android:layout_width="@dimen/three_button_width"
            android:layout_height="wrap_content"
            android:text="@string/camera"
             />

        <Button
            android:id="@+id/soundRecord"           
            android:layout_width="@dimen/three_button_width"
            android:layout_height="wrap_content"
            android:text="@string/soundrecord"
            />
        <Button
            android:id="@+id/save"            
            android:layout_width="@dimen/three_button_width"
            android:layout_height="wrap_content"
            android:text="@string/save"
            />
    </LinearLayout>
   
</LinearLayout>
