<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
 
    <!-- body -->

    <LinearLayout
        android:id="@+id/body"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_weight="1">
         <LinearLayout
	        android:id="@+id/linearLayout1"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"          
	        android:orientation="vertical" 
	        android:gravity="center"   
	        android:layout_centerInParent="true"  
	        >
	    <TextView
	        android:id="@+id/textView3"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"       
	        android:text="@string/login_title"        
	        android:textAppearance="?android:attr/textAppearanceLarge" />
	    
	    <LinearLayout
	        android:id="@+id/linearLayout2"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"  
	       android:gravity="center"
	        android:orientation="horizontal"
	        >
	    <TextView
	        android:id="@+id/textView1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/user_name"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	
	    <EditText
	        android:id="@+id/name"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:ems="10" 
	        android:drawableLeft="@drawable/user"
	        android:text="@string/default_username"/>
	</LinearLayout>
	 <LinearLayout
	        android:id="@+id/linearLayout3"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"        
	        android:orientation="horizontal"
	        android:gravity="center">"
	        >
	    <TextView
	        android:id="@+id/textView2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/user_pswd"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	
	    <EditText
	        android:id="@+id/password"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/default_password"
	        android:ems="10"
	        android:drawableLeft="@drawable/pwd"
	        android:inputType="textPassword" />
		</LinearLayout>
		 <LinearLayout
	        android:id="@+id/linearLayout4"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"        
	        android:orientation="horizontal"
	        android:gravity="center"
	        android:weightSum="3">
	        
		    <Button
		        android:id="@+id/login"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content" 
		        android:text="@string/login" 
		        android:layout_weight="1"/>
	    </LinearLayout>
	</LinearLayout>
    </LinearLayout>

</LinearLayout>