<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="fill_parent"
        android:layout_height="400dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/ic_launcher" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom|center" >

        <Button
            android:id="@+id/camera"
            android:layout_width="@dimen/three_button_width"
            android:layout_height="wrap_content"
            android:text="@string/camera" />

        <Button
            android:id="@+id/sound"
            android:layout_width="@dimen/three_button_width"
            android:layout_height="wrap_content"
            android:text="@string/soundrecord" />

        <Button
            android:id="@+id/record"
            android:layout_width="@dimen/three_button_width"
            android:layout_height="wrap_content"
            android:text="@string/textrecord" />
    </LinearLayout>

</LinearLayout>
